ClinicaVeterinaria/force-app/main/default/objects/Factura_Peluqueria__c/Factura_Peluqueria__c.object-meta.xml
<CustomObject>
    <label>Factura Peluqueria</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Factura Peliqueria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facturas Peluqueria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>