ClinicaVeterinaria/force-app/main/default/objects/Factura_Peluqueria__c/fields/IVA__c.field-meta.xml
<CustomField>
    <fullName>IVA__c</fullName>
    <label>IVA</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>