ClinicaVeterinaria/force-app/main/default/objects/Factura_Peluqueria__c/fields/Peluqueria__c.field-meta.xml
<CustomField>
    <fullName>Peluqueria__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Peluqueria</label>
    <referenceTo>Peluqueria__c</referenceTo>
    <relationshipName>Facturas_Peliqueria</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>